--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 environment:
   sdk: ">=2.17.3 <3.0.0"
 dependencies:
+  joystick: ^1.1.0
   flutter:
     sdk: flutter
 
