--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "dart.flutterSdkPath": ".fvm/flutter_sdk",
+    "dart.flutterSdkPath": "C:\\Users\\ToriCalasans\\fvm\\versions\\3.3.4",
     // Remove .fvm files from search
     "search.exclude": {
       "**/.fvm": true
