finalizados correções de icone e nome

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,31 @@ dependencies:
 
   equatable: ^2.0.3
   get_it: ^7.2.0
-  tag_ui:
+  tag_ui:   
     path: tag_ui
   flutter_bluetooth_serial: ^0.4.0
+  flutter_launcher_icons: ^0.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android:  "launcher_icon"
+  ios: true
+  image_path: "assets/icon/synapseRobot.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icon/synapseRobot.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icon/synapseRobot.png"
+    icon_size: 100 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icon/synapseRobot.png"
 
   flutter_lints: ^2.0.0
 
