--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.example.teaching_car">
     <uses-permission android:name="android.permission.BLUETOOTH" tools:node="replace"/>
    <application
-        android:label="teaching_car"
+        android:label="Synapse Robot"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
